Animation Safari fix
…

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -71,7 +71,7 @@ body{
                             font-family: "Avenir Next";
                             text-align: center;
                             font-size: 25px;
-                            @include animation('item_menu 1s 2s 1 normal forwards running');
+                            @include animation('item_menu 1s 2s 1 normal forwards');
                             animation: name duration timing-function delay iteration-count direction fill-mode play-state;
                             
                             &:hover{
@@ -99,7 +99,7 @@ body{
                 background-size: 71%;
                 background-repeat: no-repeat;
                 background-position: top center;
-                @include animation('logo 1s linear 1s 1 normal forwards running');
+                @include animation('logo 1s linear 1s 1 normal forwards');
             }
             #nav_droite{
                 width: 40%;
@@ -115,7 +115,7 @@ body{
                             font-family: "Avenir Next";
                             text-align: center;
                             font-size: 25px;
-                            @include animation('item_menu 1s linear 2s 1 normal forwards running');
+                            @include animation('item_menu 1s linear 2s 1 normal forwards');
                             &:hover{
                                 color: $orange;
                             }
@@ -146,7 +146,7 @@ body{
         position: relative;
         top :200px;
         z-index: -18;
-        @include animation('fil_orange 10s linear 3s infinite normal forwards running');
+        @include animation('fil_orange 10s linear 3s infinite normal forwards');
     }
     
     .fil_bleu_clair{
@@ -155,7 +155,7 @@ body{
         position: relative;
         top :250px;
         z-index: -18;
-        @include animation('fil_bleu_clair 5s linear 6s infinite normal forwards running');
+        @include animation('fil_bleu_clair 5s linear 6s infinite normal forwards');
     }
     
     .fil_orange_2{
@@ -164,7 +164,7 @@ body{
         position: relative;
         top :320px;
         z-index: -18;
-        @include animation('fil_orange 30s linear 8s infinite normal forwards running');
+        @include animation('fil_orange 30s linear 8s infinite normal forwards');
     }
     
     .fil_bleu_fonce{
@@ -173,7 +173,7 @@ body{
         position: relative;
         top :350px;
         z-index: -18;
-        @include animation('fil_bleu_fonce 5s linear 9s infinite normal forwards running');
+        @include animation('fil_bleu_fonce 5s linear 9s infinite normal forwards');
     }
     
     .fil_bleu_clair_2{
@@ -182,7 +182,7 @@ body{
         position: relative;
         top :400px;
         z-index: -18;
-        @include animation('fil_bleu_clair 48s linear 7s infinite normal forwards running');
+        @include animation('fil_bleu_clair 48s linear 7s infinite normal forwards');
     }
     
     .fil_orange_3{
@@ -191,7 +191,7 @@ body{
         position: relative;
         top :420px;
         z-index: -18;
-        @include animation('fil_orange 25s linear 6.7s infinite normal forwards running');
+        @include animation('fil_orange 25s linear 6.7s infinite normal forwards');
     }
     
     .fil_bleu_fonce_2{
@@ -200,7 +200,7 @@ body{
         position: relative;
         top :470px;
         z-index: -18;
-        @include animation('fil_bleu_fonce 33s linear 4.8s infinite normal forwards running');
+        @include animation('fil_bleu_fonce 33s linear 4.8s infinite normal forwards');
     }
     
     #illustration{
@@ -213,7 +213,7 @@ body{
         display: block;
         z-index: -1;
         opacity: 0;
-        @include animation('article 1s linear 3s 1 normal forwards running');
+        @include animation('article 1s linear 3s 1 normal forwards');
         background: fixed;
     }
    
